--- a/README
+++ b/README
@@ -1,9 +1,5 @@
 PROJECT DESCRIPTION
 
-
-
-Notes:
-
-- http://help.github.com/linux-set-up-git/
+Minor collage work. First contact with Perl CGI CSS HTML JS. 
 
 
